k8s/psrm-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psrm-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: psrm
  ports:
    - port: 8091
      targetPort: 8091
