k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psrm-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /v1/psrm/
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /v1/psrm/
            pathType: Prefix
            backend:
              service:
                name: psrm-cluster-ip-service
                port:
                  number: 8091
